--- a/src/main/resources/static/html/calc.html
+++ b/src/main/resources/static/html/calc.html
@@ -5,7 +5,6 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>&#10039;sonneneinstrahlungDB</title>
     <link href="/css/style.css?version=60" rel="stylesheet" type="text/css"/>
-    <link href="/css/app.css?version=60" rel="stylesheet" type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.css" rel="stylesheet" type="text/css"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid-theme.min.css" rel="stylesheet"
@@ -38,6 +37,51 @@
     <button id="radi_button" style="width:308px;">Einstrahlung</button>
     <button id="calc_button" style="width:308px;">Umrechner</button>
 </div>
+
+<br>
+<div class="grid-container">
+    <div class="grid-item">
+        <div>
+            <label><b>Ausrichtung u. Neigung</b></label>
+        </div>
+        <div>
+            <label for="alignment"><b>&alpha;s</b></label>
+            <input id="alignment" style="margin-left: 6px;" type="number" value="180">
+        </div>
+        <div>
+            <label for="tilt"><b>&gamma;s</b></label>
+            <input id="tilt" style="margin-left: 7px;" type="number" value="30">
+        </div>
+    </div>
+    <div class="grid-item">
+        <div>
+            <label><b>Dezimalgrad</b> (WGS84)</label>
+        </div>
+        <div>
+            <label for="lat"><b>Lat</b></label>
+            <input id="lat" step="0.000001" style="margin-left: 4px;" type="number" value="52.519981">
+        </div>
+        <div>
+            <label for="lon"><b>Lon</b></label>
+            <input id="lon" step="0.000001" type="number" value="13.373108">
+        </div>
+
+    </div>
+    <div class="grid-item">
+        <div>
+            <label><b>Quelle:</b> DWD© CDC</label>
+        </div>
+        <div>
+            <label for="year"><b>Jahr</b></label>
+            <input id="year" style="margin-left: 1px; width: 149px" type="text" value="2018">
+        </div>
+        <div>
+            <button id="calculation_button">Umrechnen</button>
+            <button id="calculation_export_button">Export</button>
+        </div>
+    </div>
+</div>
+<br>
 <div id="jsGrid">
 </div>
 </body>
