--- a/src/main/resources/static/html/radi.html
+++ b/src/main/resources/static/html/radi.html
@@ -5,7 +5,6 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>&#10039;sonneneinstrahlungDB</title>
     <link href="/css/style.css?version=60" rel="stylesheet" type="text/css"/>
-    <link href="/css/app.css?version=60" rel="stylesheet" type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.css" rel="stylesheet" type="text/css"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid-theme.min.css" rel="stylesheet"
@@ -45,8 +44,8 @@
         </div>
         <form autocomplete="off">
             <div class="autocomplete">
-                <label for="start_date" style="margin-left: 1px;"><b>Von</b></label>
-                <input id="start_date" type="text">
+                <label for="start_date"><b>Von</b></label>
+                <input id="start_date" style="margin-left: 1px;" type="text">
             </div>
         </form>
         <form autocomplete="off">
