--- a/src/main/resources/static/html/calc.html
+++ b/src/main/resources/static/html/calc.html
@@ -1,90 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>&#10039;sonneneinstrahlungDB</title>
-    <link href="/css/style.css?version=60" rel="stylesheet" type="text/css"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.css" rel="stylesheet" type="text/css"/>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid-theme.min.css" rel="stylesheet"
-          type="text/css"/>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js" type="text/javascript"></script>
-    <script src="js/app.js?version=500" type="text/javascript"></script>
-    <script src="js/calc.js?version=500" type="text/javascript"></script>
-</head>
-<body>
-<form action="https://www.paypal.com/cgi-bin/webscr" method="post" style="width:620px;background-color: whitesmoke;"
-      target="_top">
-    <input name="cmd" type="hidden" value="_s-xclick"/>
-    <input name="hosted_button_id" type="hidden" value="QEUV4XFQ7GBW4"/>
-    <input alt="Spenden mit dem PayPal-Button" border="0"
-           name="submit" src="https://www.paypalobjects.com/de_DE/DE/i/btn/btn_donateCC_LG.gif"
-           style="height: 47px;width: 126px;background-color: whitesmoke;"
-           title="PayPal - The safer, easier way to pay online!" type="image"/>
-    <img alt="" border="0" height="1" src="https://www.paypal.com/de_DE/i/scr/pixel.gif" width="1"/>
-</form>
-<br>
-<div style="background-color: whitesmoke;width:620px;height:35px;font-size:18pt;">
-    &#10039;sonneneinstrahlungDB
-    <button id="logout_button"
-            style="width: 80px;height:35px;background-color: transparent;border:none;">Abmelden
-    </button>
-</div>
-<br>
-<div>
-    <button id="radi_button" style="width:308px;">Einstrahlung</button>
-    <button id="calc_button" style="width:308px;">Umrechner</button>
-</div>
-
-<br>
-<div class="grid-container">
-    <div class="grid-item">
-        <div>
-            <label><b>Ausrichtung u. Neigung</b></label>
-        </div>
-        <div>
-            <label for="alignment"><b>&alpha;e</b></label>
-            <input id="alignment" style="margin-left: 6px;" type="number" value="180">
-        </div>
-        <div>
-            <label for="tilt"><b>&gamma;e</b></label>
-            <input id="tilt" style="margin-left: 7px;" type="number" value="30">
-        </div>
-    </div>
-    <div class="grid-item">
-        <div>
-            <label><b>Dezimalgrad</b> (WGS84)</label>
-        </div>
-        <div>
-            <label for="lat"><b>Lat</b></label>
-            <input id="lat" step="0.000001" style="margin-left: 4px;" type="number" value="52.519981">
-        </div>
-        <div>
-            <label for="lon"><b>Lon</b></label>
-            <input id="lon" step="0.000001" type="number" value="13.373108">
-        </div>
-
-    </div>
-    <div class="grid-item">
-        <div>
-            <label><b>Quelle:</b> DWD© CDC</label>
-        </div>
-        <form autocomplete="off">
-            <div class="autocomplete">
-                <label for="year"><b>Jahr</b></label>
-                <input id="year" style="margin-left: 1px; width: 149px" type="text" value="2018">
-            </div>
+    <head>
+        <meta charset="UTF-8">
+        <meta content="width=device-width, initial-scale=1" name="viewport">
+        <title>&#10039;sonneneinstrahlungDB</title>
+        <link href="/css/style.css?version=60" rel="stylesheet" type="text/css"/>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.css" rel="stylesheet" type="text/css"/>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid-theme.min.css" rel="stylesheet" type="text/css"/>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js" type="text/javascript"></script>
+        <script src="js/app.js?version=500" type="text/javascript"></script>
+        <script src="js/calc.js?version=500" type="text/javascript"></script>
+    </head>
+    <body>
+        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" style="width:620px;background-color: whitesmoke;"
+              target="_top">
+            <input name="cmd" type="hidden" value="_s-xclick"/>
+            <input name="hosted_button_id" type="hidden" value="QEUV4XFQ7GBW4"/>
+            <input alt="Spenden mit dem PayPal-Button" border="0"name="submit" src="https://www.paypalobjects.com/de_DE/DE/i/btn/btn_donateCC_LG.gif" style="height: 47px;width: 126px;background-color: whitesmoke;" title="PayPal - The safer, easier way to pay online!" type="image"/>
+            <img alt="" border="0" height="1" src="https://www.paypal.com/de_DE/i/scr/pixel.gif" width="1"/>
         </form>
-        <div>
-            <button id="calculation_button">Umrechnen</button>
-            <button id="calculation_export_button">Export</button>
+        <br>
+        <div style="background-color: whitesmoke;width:620px;height:35px;font-size:18pt;">
+            &#10039;sonneneinstrahlungDB
+            <button id="logout_button" style="width: 80px;height:35px;background-color: transparent;border:none;">Abmelden
+            </button>
         </div>
-    </div>
-</div>
-<br>
-<div id="jsGrid">
-</div>
-</body>
+        <br>
+        <div>
+            <button id="radi_button" style="width:308px;">Einstrahlung</button>
+            <button id="calc_button" style="width:308px;">Umrechner</button>
+        </div>
+        <br>
+        <div class="grid-container">
+            <div class="grid-item">
+                <div>
+                    <label><b>Ausrichtung u. Neigung</b></label>
+                </div>
+                <div>
+                    <label for="alignment"><b>&alpha;e</b></label>
+                    <input id="alignment" style="margin-left: 6px;" type="number" value="180">
+                </div>
+                <div>
+                    <label for="tilt"><b>&gamma;e</b></label>
+                    <input id="tilt" style="margin-left: 7px;" type="number" value="30">
+                </div>
+            </div>
+            <div class="grid-item">
+                <div>
+                    <label><b>Dezimalgrad</b> (WGS84)</label>
+                </div>
+                <div>
+                    <label for="lat"><b>Lat</b></label>
+                    <input id="lat" step="0.000001" style="margin-left: 4px;" type="number" value="52.519981">
+                </div>
+                <div>
+                    <label for="lon"><b>Lon</b></label>
+                    <input id="lon" step="0.000001" type="number" value="13.373108">
+                </div>
+            </div>
+            <div class="grid-item">
+                <div>
+                    <label><b>Quelle:</b> DWD© CDC</label>
+                </div>
+                <form autocomplete="off">
+                    <div class="autocomplete">
+                        <label for="year"><b>Jahr</b></label>
+                        <input id="year" style="margin-left: 1px; width: 149px" type="text" value="2018">
+                    </div>
+                </form>
+                <div>
+                    <button id="calculation_button">Umrechnen</button>
+                    <button id="calculation_export_button">Export</button>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div id="jsGrid">
+        </div>
+    </body>
 </html>
