--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -1,50 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>&#10039;sonneneinstrahlungDB</title>
-    <link href="/css/login.css?version=60" rel="stylesheet" type="text/css"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
-    <script src="js/app.js?version=500" type="text/javascript"></script>
-    <script src="js/login.js?version=500" type="text/javascript"></script>
-</head>
-<body>
-<form action="https://www.paypal.com/cgi-bin/webscr" method="post" style="width:247px;background-color: whitesmoke;"
-      target="_top">
-    <input name="cmd" type="hidden" value="_s-xclick"/>
-    <input name="hosted_button_id" type="hidden" value="QEUV4XFQ7GBW4"/>
-    <input alt="Spenden mit dem PayPal-Button" border="0"
-           name="submit" src="https://www.paypalobjects.com/de_DE/DE/i/btn/btn_donateCC_LG.gif"
-           style="height: 47px;width: 126px;background-color: whitesmoke;"
-           title="PayPal - The safer, easier way to pay online!" type="image"/>
-    <img alt="" border="0" height="1" src="https://www.paypal.com/de_DE/i/scr/pixel.gif" width="1"/>
-</form>
-<br>
-<div style="background-color: whitesmoke;width:247px;height:35px;font-size:15pt;">
-    &#10039;sonneneinstrahlungDB
-</div>
-<br>
-<div>
-    <label for="username">Benutzername</label>
-</div>
-<div>
-    <input id="username" type="text">
-</div>
-<div>
-    <label for="password">Passwort</label>
-</div>
-<div>
-    <input id="password" type="password">
-</div>
-<div id="alert">
-    <b>&nbsp;</b>
-</div>
-<div>
-    <button id="login_button">Anmelden</button>
-</div>
-<div>
-    <button id="save_button">Erstellen</button>
-</div>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta content="width=device-width, initial-scale=1" name="viewport">
+        <title>&#10039;sonneneinstrahlungDB</title>
+        <link href="/css/login.css?version=60" rel="stylesheet" type="text/css"/>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
+        <script src="js/app.js?version=500" type="text/javascript"></script>
+        <script src="js/login.js?version=500" type="text/javascript"></script>
+    </head>
+    <body>
+        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" style="width:247px;background-color: whitesmoke;"
+              target="_top">
+            <input name="cmd" type="hidden" value="_s-xclick"/>
+            <input name="hosted_button_id" type="hidden" value="QEUV4XFQ7GBW4"/>
+            <input alt="Spenden mit dem PayPal-Button" border="0" name="submit" src="https://www.paypalobjects.com/de_DE/DE/i/btn/btn_donateCC_LG.gif" style="height: 47px;width: 126px;background-color: whitesmoke;" title="PayPal - The safer, easier way to pay online!" type="image"/>
+            <img alt="" border="0" height="1" src="https://www.paypal.com/de_DE/i/scr/pixel.gif" width="1"/>
+        </form>
+        <br>
+        <div style="background-color: whitesmoke;width:247px;height:35px;font-size:15pt;">
+            &#10039;sonneneinstrahlungDB
+        </div>
+        <br>
+        <div>
+            <label for="username">Benutzername</label>
+        </div>
+        <div>
+            <input id="username" type="text">
+        </div>
+        <div>
+            <label for="password">Passwort</label>
+        </div>
+        <div>
+            <input id="password" type="password">
+        </div>
+        <div id="alert">
+            <b>&nbsp;</b>
+        </div>
+        <div>
+            <button id="login_button">Anmelden</button>
+        </div>
+        <div>
+            <button id="save_button">Erstellen</button>
+        </div>
+    </body>
 </html>
