--- a/src/main/resources/static/html/calc.html
+++ b/src/main/resources/static/html/calc.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8">
         <meta content="width=device-width, initial-scale=1" name="viewport">
         <title>&#10039;sonneneinstrahlungDB</title>
-        <link href="/css/style.css?version=60" rel="stylesheet" type="text/css"/>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
+        <link href="/css/style.css?version=600" rel="stylesheet" type="text/css"/>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js" type="text/javascript"></script>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.css" rel="stylesheet" type="text/css"/>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid-theme.min.css" rel="stylesheet" type="text/css"/>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js" type="text/javascript"></script>
-        <script src="js/app.js?version=500" type="text/javascript"></script>
-        <script src="js/calc.js?version=500" type="text/javascript"></script>
+        <script src="js/app.js?version=600" type="text/javascript"></script>
+        <script src="js/calc.js?version=600" type="text/javascript"></script>
     </head>
     <body>
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" style="width:620px;background-color: whitesmoke;"
@@ -61,7 +61,7 @@
             </div>
             <div class="grid-item">
                 <div>
-                    <label><b>Quelle:</b> DWD© CDC</label>
+                    <label><b>Quelle:</b>&nbsp;DWD&copy;&nbsp;CDC</label>
                 </div>
                 <form autocomplete="off">
                     <div class="autocomplete">
