--- a/src/main/resources/static/html/rad.html
+++ b/src/main/resources/static/html/rad.html
@@ -11,15 +11,15 @@
           type="text/css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js" type="text/javascript"></script>
     <script src="js/app.js?version=1000" type="text/javascript"></script>
-    <script src="js/calc.js?version=1000" type="text/javascript"></script>
+    <script src="js/rad.js?version=1000" type="text/javascript"></script>
 </head>
 <body>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" style="width:620px;background-color: whitesmoke;"
       target="_top">
     <input name="cmd" type="hidden" value="_s-xclick"/>
     <input name="hosted_button_id" type="hidden" value="QEUV4XFQ7GBW4"/>
-    <input alt="Spenden mit dem PayPal-Button" border="0" name="submit"
-           src="https://www.paypalobjects.com/de_DE/DE/i/btn/btn_donateCC_LG.gif"
+    <input alt="Spenden mit dem PayPal-Button" border="0"
+           name="submit" src="https://www.paypalobjects.com/de_DE/DE/i/btn/btn_donateCC_LG.gif"
            style="height: 47px;width: 126px;background-color: whitesmoke;"
            title="PayPal - The safer, easier way to pay online!" type="image"/>
     <img alt="" border="0" height="1" src="https://www.paypal.com/de_DE/i/scr/pixel.gif" width="1"/>
@@ -27,7 +27,8 @@
 <br>
 <div style="background-color: whitesmoke;width:620px;height:35px;font-size:18pt;">
     &#10039;sonneneinstrahlungDB
-    <button id="logout_button" style="width: 80px;height:35px;background-color: transparent;border:none;">Abmelden
+    <button id="logout_button"
+            style="width: 80px;height:35px;background-color: transparent;border:none;">Abmelden
     </button>
 </div>
 <br>
@@ -38,17 +39,20 @@
 <br>
 <div class="grid-container">
     <div class="grid-item">
-        <div>
-            <label><b>Ausrichtung u. Neigung</b></label>
+        <div id="rows">
         </div>
-        <div>
-            <label for="alignment"><b>&alpha;e</b></label>
-            <input id="alignment" style="margin-left: 6px;" type="number" value="180">
-        </div>
-        <div>
-            <label for="tilt"><b>&gamma;e</b></label>
-            <input id="tilt" style="margin-left: 7px;" type="number" value="30">
-        </div>
+        <form autocomplete="off">
+            <div class="autocomplete">
+                <label for="start_date"><b>Von</b></label>
+                <input id="start_date" style="margin-left: 1px;" type="text">
+            </div>
+        </form>
+        <form autocomplete="off">
+            <div class="autocomplete">
+                <label for="end_date"><b>Bis</b></label>
+                <input id="end_date" style="margin-left: 7px;" type="text">
+            </div>
+        </form>
     </div>
     <div class="grid-item">
         <div>
@@ -67,15 +71,17 @@
         <div>
             <label><b>Quelle:</b>&nbsp;DWD&copy;&nbsp;CDC</label>
         </div>
-        <form autocomplete="off">
-            <div class="autocomplete">
-                <label for="year"><b>Jahr</b></label>
-                <input id="year" style="margin-left: 1px; width: 149px" type="text" value="2018">
-            </div>
-        </form>
         <div>
-            <button id="calculation_button">Umrechnen</button>
-            <button id="calculation_export_button">Export</button>
+            <label for="type_select"><b>Art</b></label>
+            <select id="type_select" style="margin-left: 4px;">
+                <option value="GLOBAL">GLOBAL</option>
+                <option value="DIRECT">DIRECT</option>
+                <option value="DIFFUSE">DIFFUSE</option>
+            </select>
+        </div>
+        <div>
+            <button id="search_button">Suche</button>
+            <button id="export_button">Export</button>
         </div>
     </div>
 </div>
