--- a/src/main/resources/static/html/irr.html
+++ b/src/main/resources/static/html/irr.html
@@ -14,6 +14,9 @@
     <script src="js/irr.js?version=1000" type="text/javascript"></script>
 </head>
 <body>
+<a href="https://github.com/fantasy2113/solar-radiation-application">Quellcode:
+    https://github.com/fantasy2113/solar-radiation-application</a>
+<br>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" style="width:620px;background-color: whitesmoke;"
       target="_top">
     <input name="cmd" type="hidden" value="_s-xclick"/>
