--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>&#10039;sonneneinstrahlungDB</title>
-    <link href="/css/login.css?version=xx" rel="stylesheet" type="text/css"/>
+    <link href="/css/login.css?version=(.)(.)" rel="stylesheet" type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js" type="text/javascript"></script>
-    <script src="js/app.js?version=xx" type="text/javascript"></script>
-    <script src="js/login.js?version=xx" type="text/javascript"></script>
+    <script src="js/app.js?version=(.)(.)" type="text/javascript"></script>
+    <script src="js/login.js?version=(.)(.)" type="text/javascript"></script>
 </head>
 <body>
 <div style="background-color: whitesmoke;width:247px;height:55px;font-size:11pt;">
