--- a/src/main/resources/static/html/irr.html
+++ b/src/main/resources/static/html/irr.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>&#10039;sonneneinstrahlungDB</title>
-    <link href="/css/style.css?version=(.)(.)" rel="stylesheet" type="text/css"/>
+    <link href="/css/style.css?version=111" rel="stylesheet" type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js" type="text/javascript"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.css" rel="stylesheet" type="text/css"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid-theme.min.css" rel="stylesheet"
           type="text/css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js" type="text/javascript"></script>
-    <script src="js/app.js?version=(.)(.)" type="text/javascript"></script>
-    <script src="js/irr.js?version=(.)(.)" type="text/javascript"></script>
+    <script src="js/app.js?version=111" type="text/javascript"></script>
+    <script src="js/irr.js?version=111" type="text/javascript"></script>
 </head>
 <body>
 <div style="background-color: whitesmoke;width:620px;height:55px;font-size:16pt;">
